# lightify

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  setup.sh
benches/: eval_pipeline.py  fetch_real_1m.py  generate_200.py  generate_data.py  queries_20.py  results_langgraph_queries_5000.json  results_mcd_stress.json  results_queries_200.json  results_queries_2000.json  results_queries_5000.json  results_real_1197316.json  run_bench.py  run_full_bench.py  run_grid_bench.py  run_langgraph_compare.py  run_mcd_stress.py  run_real.py  run_real_bench.py  run_routing.py
benches/datasets/mcd/: contradictions_100.json
benches/datasets/real/: README.md  queries_mtbench.json  queries_nq.json  queries_real.json  queries_seeds_combined.json
benches/datasets/synthetic/: README.md  queries_200.json  queries_2000.json  queries_5000.json
docs/: architecture.mmd
lightify/: __init__.py  action_router.py  banner.txt  cli.py  compression.py  confidence.py  config.py  conflict.py  context_builder.py  pipeline.py  pipeline_real.py  prompt_shaper.py  router.py  sufficiency.py  types.py
lightify/models/: claude_cli.py  ollama_local.py  simulated.py
lightify/storage/: sqlite_memory.py
tests/: test_action_router.py  test_trace_budget.py
